
	* font.pl.in (xfs_reload): Use more compatible way to restart xfs.
	(x_font_set): Restart xfs only when needed.

2001-12-19  Tambet Ingo  <tambet@ximian.com>

	* shares-conf.in (get_installed_tools): Implement.
	(xml_print): Print tools.

2001-12-19  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Use the
	new keyword for SuSE's suseconfig run.

	* replace.pl.in (xst_replace_run_entry): New "_always_" key
	forces call of the function.
	(xst_replace_from_table): same.

2001-12-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (check_debian): Correctly detect woody, which
	is now officialy 3.0.

2001-12-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in: Added rh72 back to supported list.

	* replace.pl.in (xst_replace_join_hash): Delete entries missing
	in the hash found in the old file. Fixes #16329

	* network.pl.in (xst_network_debian_woody_get_auto): Hmm... this
	should return 1/0. Fixes #12983

2001-12-16  Chema Celorio  <chema@celorio.com>

	* network-conf.in: remove rh 7.2 from supported list

	* configure.in (dnl): bump version to 0.11.0

2001-12-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_set): simplified expression.
	(xst_network_rh72_interface_delete): redhat-7.2's own version of this.

	* network-conf.in (xml_parse): oops.

	* parse.pl.in (xst_parse_expand): Copy the array before expanding
	into it.

	* network.pl.in (xst_network_sysconfig_dir_ifaces_get_existing): More
	flexible ifcfg-* file matching.

	* users-conf.in: Added redhat-7.2 to logindefs_dist_map.

	* runlevel-conf.in: Added redhat-7.2 as a supported platform.

	* network.pl.in (xst_network_xml_parse_interface): modernized.
	Also, pass the whole hash to network_get_file.
	(xst_network_get_broadcast_ping_cmd): redhat-7.2 was missing.
	(xst_network_rh72_get_file): Red Hat 7.2 version.

	* network-conf.in (xml_parse): modernized parse routines.